// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <div
        class="headerTrailingActions"
      >
        <button
          aria-label="Open sidebar"
          class="iconButton toggle"
          type="button"
        >
          <span
            aria-hidden="true"
            class="railMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            />
          </span>
          <svg
            class="panelIcon"
            data-content="35f95b0c"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
    <div
      class="navCluster navClusterCollapsed"
    >
      <button
        aria-label="New session"
        class="newSession"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="80a2f989"
            fill="none"
            height="18"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          />
        </span>
      </button>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            />
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="localBuildBrand"
              >
                <span
                  class="localBuildTitle"
                >
                  <span
                    class="brandTitleWrap"
                  >
                    <span
                      class="brandMoreweb"
                    >
                      moreweb
                    </span>
                     Local Build
                    <svg
                      class="brandChevron"
                      data-content="6506c885"
                      fill="none"
                      height="13"
                      viewBox="0 0 14 14"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </span>
                </span>
                <span
                  class="buildVersion"
                >
                  1.2.3-rc.4-abc1234-dirty
                </span>
              </span>
            </div>
          </span>
        </span>
      </button>
      <div
        class="headerTrailingActions"
      >
        <button
          aria-label="Search"
          class="headerActionButton"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="15"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="Notifications"
          class="headerActionButton"
          type="button"
        >
          <svg
            data-content="46dea92f"
            fill="none"
            height="16"
            viewBox="2 0.25 12 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="Collapse sidebar"
          class="iconButton toggle"
          type="button"
        >
          <svg
            class="panelIcon"
            data-content="35f95b0c"
            fill="none"
            height="15"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
    <div
      class="navCluster"
    >
      <button
        aria-label="New session"
        class="newSession codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="80a2f989"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="newSessionLabel navItemLabel wide"
          >
            New chat
          </span>
        </span>
        <svg
          class="navPlusIcon"
          data-content="51b31784"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="a31c303c"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            Pull requests
          </span>
        </span>
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="2a91a8d7"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            Scheduled
          </span>
        </span>
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="150a89e2"
            fill="none"
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            Plugins
          </span>
        </span>
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="163bba65"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            Explore
          </span>
        </span>
      </button>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            />
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <span
                class="localBuildBrand"
              >
                <span
                  class="localBuildTitle"
                >
                  <span
                    class="brandTitleWrap"
                  >
                    <span
                      class="brandMoreweb"
                    >
                      moreweb
                    </span>
                     本地构建
                    <svg
                      class="brandChevron"
                      data-content="6506c885"
                      fill="none"
                      height="13"
                      viewBox="0 0 14 14"
                      width="13"
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  </span>
                </span>
                <span
                  class="buildVersion"
                >
                  1.2.3-rc.4-abc1234-dirty
                </span>
              </span>
            </div>
          </span>
        </span>
      </button>
      <div
        class="headerTrailingActions"
      >
        <button
          aria-label="搜索"
          class="headerActionButton"
          type="button"
        >
          <svg
            data-content="4ca56c6d"
            fill="none"
            height="15"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="通知"
          class="headerActionButton"
          type="button"
        >
          <svg
            data-content="46dea92f"
            fill="none"
            height="16"
            viewBox="2 0.25 12 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <button
          aria-label="收起侧边栏"
          class="iconButton toggle"
          type="button"
        >
          <svg
            class="panelIcon"
            data-content="35f95b0c"
            fill="none"
            height="15"
            viewBox="0 0 16 16"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
      </div>
    </div>
    <div
      class="navCluster"
    >
      <button
        aria-label="新建会话"
        class="newSession codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="80a2f989"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="newSessionLabel navItemLabel wide"
          >
            新会话
          </span>
        </span>
        <svg
          class="navPlusIcon"
          data-content="51b31784"
          fill="none"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="a31c303c"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            拉取请求
          </span>
        </span>
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="2a91a8d7"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            定时任务
          </span>
        </span>
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="150a89e2"
            fill="none"
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            插件
          </span>
        </span>
      </button>
      <button
        class="codexNavItem"
        type="button"
      >
        <span
          class="navLeading"
        >
          <svg
            data-content="163bba65"
            fill="none"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          />
          <span
            class="navItemLabel"
          >
            探索
          </span>
        </span>
      </button>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
